RESOLVED FIXED55635
WKPageSetMemoryCacheClientCallsEnabled doesn't persist if web process crashes
https://bugs.webkit.org/show_bug.cgi?id=55635
Summary WKPageSetMemoryCacheClientCallsEnabled doesn't persist if web process crashes
Anders Carlsson
Reported 2011-03-02 17:22:34 PST
WKPageSetMemoryCacheClientCallsEnabled doesn't persist if web process crashes
Attachments
Patch (5.39 KB, patch)
2011-03-02 17:24 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-02 17:24:25 PST
Anders Carlsson
Comment 2 2011-03-02 17:38:26 PST
Note You need to log in before you can comment on or make changes to this bug.