2011-03-02  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        WKPageSetMemoryCacheClientCallsEnabled doesn't persist if web process crashes
        https://bugs.webkit.org/show_bug.cgi?id=55635

        * Shared/WebPageCreationParameters.cpp:
        (WebKit::WebPageCreationParameters::encode):
        (WebKit::WebPageCreationParameters::decode):
        Encode and decode areMemoryCacheClientCallsEnabled.

        * Shared/WebPageCreationParameters.h:
        Add areMemoryCacheClientCallsEnabled member variable.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::WebPageProxy):
        Initialize m_areMemoryCacheClientCallsEnabled.

        (WebKit::WebPageProxy::setMemoryCacheClientCallsEnabled):
        Update m_areMemoryCacheClientCallsEnabled. Send a message if necessary.

        (WebKit::WebPageProxy::creationParameters):
        Set areMemoryCacheClientCallsEnabled.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::WebPage):
        Call WebPage::setMemoryCacheMessagesEnabled.


Canonical link: https://commits.webkit.org/70085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80190 268f45cc-cd09-0410-ab3c-d52691b4dbfc