Source/WebKit2/Shared/WebPageCreationParameters.h
@@ -58,6 +58,8 @@ struct WebPageCreationParameters {
     bool drawsBackground;
     bool drawsTransparentBackground;
 
+    bool areMemoryCacheClientCallsEnabled;
+
     bool useFixedLayout;
     WebCore::IntSize fixedLayoutSize;
 
